package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "content",
    srcs = glob(["**/*.ts"]),
    module_name = "@katalyst/content",
    deps = [
        "//commons/servers",
        "//commons/utils",
        "//contracts",
        "@npm//@types",
        "@npm//@types/analytics-node",
        "@npm//@types/compression",
        "@npm//@types/log4js",
        "@npm//@types/ms",
        "@npm//@types/multer",
        "@npm//@types/node",
        "@npm//@types/node-fetch",
        "@npm//@types/parallel-transform",
        "@npm//@types/uuid",
        "@npm//abort-controller",
        "@npm//analytics-node",
        "@npm//async-mutex",
        "@npm//aws-sdk",
        "@npm//caching-map",
        "@npm//cids",
        "@npm//compression",
        "@npm//cors",
        "@npm//dcl-crypto",
        "@npm//eth-crypto",
        "@npm//express",
        "@npm//ip",
        "@npm//log4js",
        "@npm//morgan",
        "@npm//ms",
        "@npm//multer",
        "@npm//multihashing-async",
        "@npm//node-fetch",
        "@npm//parallel-transform",
        "@npm//uuid",
        "@npm//web3x",
    ],
)
