package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "content",
    srcs = glob(["**/*.ts"]),
    module_name = "@katalyst/content",
    deps = [
        "//commons/servers",
        "//commons/utils",
        "//contracts",
        "@npm//@types",
        "@npm//@types/analytics-node",
        "@npm//@types/compression",
        "@npm//@types/log4js",
        "@npm//@types/lru-cache",
        "@npm//@types/ms",
        "@npm//@types/multer",
        "@npm//@types/node",
        "@npm//@types/node-fetch",
        "@npm//@types/node-pg-migrate",
        "@npm//@types/parallel-transform",
        "@npm//@types/pg-promise",
        "@npm//@types/uuid",
        "@npm//abort-controller",
        "@npm//analytics-node",
        "@npm//aws-sdk",
        "@npm//cids",
        "@npm//compression",
        "@npm//cors",
        "@npm//dcl-crypto",
        "@npm//eth-crypto",
        "@npm//express",
        "@npm//ip",
        "@npm//log4js",
        "@npm//lru-cache",
        "@npm//morgan",
        "@npm//ms",
        "@npm//multer",
        "@npm//multihashing-async",
        "@npm//node-fetch",
        "@npm//node-pg-migrate",
        "@npm//parallel-transform",
        "@npm//pg-promise",
        "@npm//uuid",
        "@npm//web3x",
    ],
)
