package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "lambdas",
    srcs = glob(["**/*.ts"]),
    module_name = "@katalyst/lambdas",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//contracts",
        "//commons/utils",
        "//commons/servers",
        "@npm//@dcl/schemas",
        "@npm//@types",
        "@npm//@types/node",
        "@npm//@types/compression",
        "@npm//@types/log4js",
        "@npm//cors",
        "@npm//express",
        "@npm//sharp",
        "@npm//compression",
        "@npm//log4js",
        "@npm//morgan",
        "@npm//multer",
        "@npm//@types/multer",
        "@npm//@types/lru-cache",
        "@npm//lru-cache",
        "@npm//node-fetch",
        "@npm//@types/node-fetch",
        "@npm//decentraland-commons",
        "@npm//web3",
        "@npm//fp-future",
        "@npm//@types/web3",
        "@npm//aws-sdk",
        "@npm//dcl-crypto",
        "@npm//dcl-catalyst-commons",
        "@npm//dcl-catalyst-client",
        "@npm//@dcl/urn-resolver",
        "@npm//@types/qs",
        "@npm//qs"
    ],
)
