load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "peer_proto",
    srcs = ["peer.proto"],
)

typescript_proto_library(
    name = "peer_proto_ts",
    proto = ":peer_proto",
)

