load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "peer-performance-test-client",
    srcs = [
        "index.ts",
        "protobuf/comms.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//commons/utils",
        "@npm//@dcl/catalyst-peer",
        "@npm//protobufjs",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "katalyst/comms/performance-test/client/index",
    port = 7654,
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = [
        "index.html",
        "@npm//simple-peer:simple-peer__files",
        "config.js",
    ],
    deps = [
        "config.js",
        ":peer-performance-test-client",
        "@npm//@dcl/catalyst-peer:catalyst-peer__umd",
        "@npm//protobufjs:protobufjs__umd",
    ],
)
