load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "performance-test-server",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//commons/utils",
        "@npm//@types",
        "@npm//cors",
        "@npm//express",
        "@npm//isomorphic-fetch",
        "@npm//morgan",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":performance-test-server",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "server.ts",
)