package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "tests_helpers",
    module_name = "@katalyst/test-helpers",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//content/src:content",
        "//crypto/src",

        "@npm//faker",
        "@npm//@types/faker"
    ],
)