package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "tests_helpers",
    srcs = glob(["**/*.ts"]),
    module_name = "@katalyst/test-helpers",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//contracts",
        "//commons/servers",
        "//commons/utils",
        "//content/src:content",
        "@npm//@types/faker",
        "@npm//@types/node",
        "@npm//dcl-catalyst-commons",
        "@npm//dcl-crypto",
        "@npm//faker",
        "@npm//ts-mockito",
    ],
)
