load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "peer-stress-test-client",
    srcs = ["index.ts"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//comms/peer",
    ],
)

ts_library(
    name = "peer-stress-test",
    srcs = ["run-test.ts"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//puppeteer",
        "@npm//tree-kill",
    ],
)

nodejs_binary(
    name = "run-test",
    data = [
        "peer-stress-test",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "run-test.ts",
)

ts_devserver(
    name = "devserver",
    entry_module = "katalyst/comms/peer/scripts/stress-test/index",
    port = 7654,
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = [
        "index.html",
        "@npm//simple-peer:simple-peer__files",
        "config.js",
    ],
    deps = [
        "config.js",
        ":peer-stress-test-client",
        "@npm//eventemitter3:eventemitter3__umd",
    ],
)
